--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@ https://templatemo.com/tm-562-space-dynamic
                 <h2>وبسایت یزدا تک مرجع<em> قالب </em> و طرح های <span>گرافیکی</span></h2>
                 <br>
                 <ul>
-                  <li><i class="fa fa-envelope"></i><a href="mailto:">yazdatec@gmail.com</a></li> 
+                  <li><i class="fa fa-envelope"></i><a href="mailto:">yazdatech.ir@gmail.com</a></li> 
                   <br>
-                  <li><i class="fa fa-phone"></i><a href="callto:" dir="ltr">989357218545+</a></li>
+                  <li><i class="fa fa-phone"></i><a href="callto:" dir="ltr">989913160898+</a></li>
                   <li><i class="fa fa-map-marker"></i><address>ایران,یزد,مشهد</address></li>
               </ul>
                 <form id="search" action="#" method="GET">
