--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="DANIYAL NAJARZADEH">
+    <meta name="description" content="تیم فناوری یزدا تک">
+    <meta name="keywords" content="تیم فناوری یزدا تک , یزدا تک , طراحی سایت , ساخت وبسایت , ساخت اپلیکیشن , دانیال نجارزاده , دانیال نجارزاده ریسه , یزدا تک , توسعه سایت , ساخت و توسعه انواع اپلیکیشن , یزد , yazda tech , YAZDA TECH , yazdatech.ir , yazdatech , YAZDATECH.IR , YAZDATECH , ">
+    <meta name="author" content="دانیال نجارزاده ریسه | یزدا تک">
+    <meta name="website" content="https://yazdatech.ir">
+    <meta name="email" content="yazdatech.ir@gmail.com | daniyal.najarzadeh@gmail.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
@@ -511,7 +514,7 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
           <p>© کلیه حقوق برای وب سایت یزدا تک محفوظ است 
           
-          <br>طراحی توسط: <a rel="nofollow" href="https://yazdatech.ir">یزدا تک</a></p>
+          <br>طراحی و ساخت توسط: <a rel="nofollow" href="https://yazdatech.ir">یزدا تک | YAZDA TECH</a></p>
         </div>
       </div>
     </div>
